# OCR

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: compare.py  crawl.py  eval.py  finetune_lora.py  hf_infer.py  merge_lora.py  run_examples_hf_infer.py  vllm_client_infer.py  vllm_local_infer.py
src/ocr_ft/: __init__.py  eval.py  metrics.py  modeling.py  train.py
src/ocr_ft/data/: __init__.py  collator.py  dataset.py
